# MiguelLM

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml
config/: dev.yaml  server.yaml
docs/: CLOUDFLARE_TUNNEL.md
persona/: boundaries.md  facts_to_remember.md  identity.md  known_people.md  lab_knowledge.md  research_projects.md  speaking_style.md
scripts/: check_public_safety.py
src/: miguellm.py
src/miguel_lm/: audio_codec.py  audio_input.py  cli.py  config.py  desktop.py  engine.py  faces.py  memory.py  models.py  persona.py  playback.py  remote.py  safety.py  server.py  tts_supervisor.py  tui.py
src/miguel_lm/defaults/: client.yaml
src/miguel_lm/providers/: __init__.py  base.py  factory.py  fallback.py  local_http_tts_provider.py  local_model.py  openai_provider.py  parsing.py
src/miguel_lm/web/: app.js  index.html  styles.css
tests/: test_cli.py  test_config_persona.py  test_conversation_engine.py  test_desktop.py  test_faces.py  test_local_http_tts_provider.py  test_memory.py  test_remote.py  test_remote_bridge.py  test_tui.py
