[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miguellm"
version = "0.1.0"
description = "MiguelLM: a standalone retro terminal Miguel clone with text, push-to-talk, local memory, and local F5-TTS speech."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.0.0",
    "PyYAML>=6.0",
    "rich>=13.7",
    "textual>=0.58",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
miguellm = "miguel_lm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
